--- a/.gitignore
+++ b/.gitignore
@@ -4,20 +4,19 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+### Android Studio ###
+local.properties
+
 ### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
+.idea
+.kotlin
+.run
 *.iws
 *.iml
 *.ipr
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
-
-### Kotlin ###
-.kotlin
 
 ### Eclipse ###
 .apt_generated
